--- a/templates/forms.templ
+++ b/templates/forms.templ
@@ -9,19 +9,19 @@ templ OptionalFloatSlider(label, description, unit string) {
 }
 
 templ floatSlider(label, description, unit string, optional bool) {
-  <div class="flex flex-row gap-3 my-3 form-control">
+  <div class="flex flex-row gap-3 my-3 form-control" x-data="{ value: 0 }">
     <div class="basis-1/5">
       <label class="label" for="delay_time">
         <span class="label-text text-lg">{ label }:</span>
       </label>
     </div>
     <div class="basis-3/5 align-middle">
-      <input name="delay_time" type="range" min="0" max="10000" value="40" class="range range-primary" />
+      <input name="delay_time" type="range" min="0" max="10000" value="40" class="range range-primary" x-model="value" />
     </div>
     <div class="basis-1/5">
       <div class="join">
         <div>
-          <input type="text" class="input input-bordered input-primary input-sm w-full max-w-xs" />
+          <input type="text" class="input input-bordered input-primary input-sm w-full max-w-xs" x-model="value" />
         </div>
         <div class="mx-2 align-middle">
           { unit }
