--- a/templates/index.templ
+++ b/templates/index.templ
@@ -5,7 +5,7 @@ templ Foo() {
   <h1>Hi</h1>
 }
 
-templ RulesForm() {
+templ DelaySettings() {
   <div class="bg-base-300 my-5 p-3 rounded-xl">
     <div class="form-control">
       <label class="label cursor-pointer">
@@ -27,4 +27,8 @@ templ RulesForm() {
       @OptionalFloatSlider("Correlation", "Amount that the next delay value depends on the previous delay value.", "%")
     </section>
   </div>
+}
+
+templ RulesForm() {
+  @DelaySettings()
 }
