--- a/templates/base.templ
+++ b/templates/base.templ
@@ -47,22 +47,11 @@ templ Base(state GlobalState, content templ.Component) {
         <div class="divider"></div>
 
         <div class="flex w-full">
-          <div class="grid h-10 flex-grow card place-items-center">
-            Network Shaper
-          </div>
-
-          <div class="divider divider-horizontal"></div>
-
-          <div class="grid h-10 flex-grow card place-items-center text-xs">
-            <div>Network Shaper</div>
-            <div>Copyright &copy; 2015-2023</div>
-            <div>Josh VanderLinden</div>
-          </div>
-
-          <div class="divider divider-horizontal"></div>
-
-          <div class="grid h-10 flex-grow card place-items-center">
-            Josh VanderLinden
+          <div class="grid h-5 flex-grow card place-items-center text-xs">
+            <div>
+              <a href="https://github.com/codekoala/network-shaper">Network Shaper</a>
+            </div>
+            <div>Copyright &copy; 2015-2023 Josh VanderLinden</div>
           </div>
         </div>
       </div>
