--- a/view/component/floatslider.templ
+++ b/view/component/floatslider.templ
@@ -1,4 +1,4 @@
-package templates
+package component
 
 templ FloatSlider(label, description, unit string) {
   @floatSlider(label, description, unit, false)
