--- a/view/index.templ
+++ b/view/index.templ
@@ -1,7 +1,7 @@
 package view
 
 import (
-  "github.com/codekoala/network-shaper/view/component"
+  fs "github.com/codekoala/network-shaper/view/component/floatslider"
 )
 
 templ Foo() {
@@ -26,9 +26,27 @@ templ DelaySettings() {
     </div>
 
     <section x-show="enabled" x-transition>
-      @component.FloatSlider("Time", "Amount of time to delay each packet.", "ms")
-      @component.OptionalFloatSlider("Jitter", "Delay each packet ± the jitter value.", "ms")
-      @component.OptionalFloatSlider("Correlation", "Amount that the next delay value depends on the previous delay value.", "%")
+      @fs.FloatSlider(fs.With(
+        fs.Label("Time"),
+        fs.Descr("Amount of time to delay each packet."),
+        fs.Max(10000.0),
+        fs.Step(1.0),
+      ))
+
+      @fs.FloatSlider(fs.With(
+        fs.Label("Jitter"),
+        fs.Descr("Delay each packet ± the jitter value."),
+        fs.Max(10000.0),
+        fs.Step(1.0),
+        fs.Optional(true),
+      ))
+
+      @fs.FloatSlider(fs.With(
+        fs.Label("Correlation"),
+        fs.Descr("Amount that the next delay value depends on the previous delay value."),
+        fs.Unit("%"),
+        fs.Optional(true),
+      ))
     </section>
   </div>
 }
