--- a/view/index.templ
+++ b/view/index.templ
@@ -49,6 +49,26 @@ templ DelaySettings() {
       ))
     </section>
 
+    <div class="grid grid-cols-5 gap-2">
+      <div>label</div>
+      <div class="grid col-span-3">
+        control
+      </div>
+      <div>thing</div>
+
+      <div>label</div>
+      <div class="grid col-span-3">
+        control
+      </div>
+      <div>thing</div>
+
+      <div>label</div>
+      <div class="grid col-span-3">
+        control
+      </div>
+      <div>thing</div>
+    </div>
+
   </div>
 }
 
