--- a/view/component/floatslider/display.templ
+++ b/view/component/floatslider/display.templ
@@ -1,31 +1,27 @@
 package floatslider
 
 templ FloatSlider(opts *Opts) {
-  <div class="flex flex-row gap-3 my-3 form-control" x-data={ opts.AlpineValue() }>
-    <div class="basis-1/5">
-      <label class="label" for="delay_time">
-        <span class="label-text text-lg">{ opts.Label }:</span>
-      </label>
-    </div>
-    <div class="basis-3/5 align-middle">
-      <input name="delay_time" type="range" min={ opts.MinStr() } max={ opts.MaxStr() } step={ opts.StepStr() } class="range range-primary" x-model="value" />
-    </div>
-    <div class="basis-1/5">
-      <div class="join">
-        <input type="number" min={ opts.MinStr() } max={ opts.MaxStr() } step={ opts.StepStr() } class="join-item input input-bordered input-primary text-right" x-model="value" />
-        <button class="btn input-bordered join-item" disabled>
-          { opts.Unit }
-        </button>
-      </div>
-    </div>
+  <div class="align-middle" x-data={ opts.AlpineValue() }>
+    <label class="label" for="delay_time">
+      <span class="label-text text-lg">{ opts.Label }:</span>
+    </label>
   </div>
 
-  <div class="flex flex-row">
-    <div class="text-sm">
-      if opts.Optional {
-        <span class="italic">Optional</span>. &nbsp;
-      }
-      { opts.Descr }
-    </div>
+  <div class="align-middle col-span-3">
+    <input name="delay_time" type="range" min={ opts.MinStr() } max={ opts.MaxStr() } step={ opts.StepStr() } class="range range-primary" x-model="value" />
+  </div>
+
+  <div class="align-middle join">
+      <input type="number" min={ opts.MinStr() } max={ opts.MaxStr() } step={ opts.StepStr() } class="join-item input input-bordered input-primary text-right w-32" x-model="value" />
+      <button class="btn input-bordered join-item w-14" disabled>
+        { opts.Unit }
+      </button>
+  </div>
+
+  <div class="col-span-5 text-sm">
+    if opts.Optional {
+      <span class="italic">Optional</span>. &nbsp;
+    }
+    { opts.Descr }
   </div>
 }
