--- a/view/index.templ
+++ b/view/index.templ
@@ -1,6 +1,7 @@
 package view
 
 import (
+  "github.com/codekoala/network-shaper/view/component"
   fs "github.com/codekoala/network-shaper/view/component/floatslider"
 )
 
@@ -101,4 +102,5 @@ templ DelaySettings() {
 
 templ RulesForm() {
   @DelaySettings()
+  @component.RateLimitSettings()
 }
