--- a/view/layout/base.templ
+++ b/view/layout/base.templ
@@ -37,6 +37,8 @@ templ Base(state model.GlobalState, content templ.Component) {
           }
         </div>
 
+        <div class="divider"></div>
+
         @content
 
         <div class="divider"></div>
