--- a/view/outbound.templ
+++ b/view/outbound.templ
@@ -2,9 +2,10 @@ package view
 
 import (
   "github.com/codekoala/network-shaper/view/component"
+	"github.com/codekoala/network-shaper/netem"
 )
 
-templ OutboundRulesForm() {
+templ OutboundRulesForm(cfg *netem.Netem) {
   <div>
     <h1>Outbound Traffic Shaping</h1>
   </div>
@@ -13,5 +14,5 @@ templ OutboundRulesForm() {
     These settings apply to traffic leaving the network controlled by the network shaper.
   </div>
 
-  @component.RulesForm()
+  @component.RulesForm(cfg)
 }
