--- a/view/component/duplication.templ
+++ b/view/component/duplication.templ
@@ -1,34 +1,40 @@
 package component
 
 import (
-  fs "github.com/codekoala/network-shaper/view/component/floatslider"
+	"fmt"
+	fs "github.com/codekoala/network-shaper/view/component/floatslider"
+	"github.com/codekoala/network-shaper/netem"
 )
 
-templ DuplicationSettings() {
-  <div class="bg-base-300 my-5 p-3 rounded-xl" x-data="{ enabled: true }">
-    <div class="form-control">
-      <label class="label cursor-pointer">
-        <span class="label-text text-lg font-bold">Duplication</span>
-        <input type="checkbox" class="toggle toggle-primary" x-model="enabled" />
-      </label>
-    </div>
+func GetDuplicationData(cfg *netem.Netem) string {
+	return fmt.Sprintf(
+		`{ enabled: %v }`,
+		cfg.HasDuplicationSettings(),
+	)
+}
 
-    <div>
-      Duplicate the chosen percent of packets before queuing them. It is also
-      possible to add a correlation.
-    </div>
-
-    <section x-show="enabled" x-transition>
-      @fs.FloatSlider(fs.With(
+templ DuplicationSettings(cfg *netem.Netem) {
+	<div class="bg-base-300 my-5 p-3 rounded-xl" x-data={ GetDuplicationData(cfg) }>
+		<div class="form-control">
+			<label class="label cursor-pointer">
+				<span class="label-text text-lg font-bold">Duplication</span>
+				<input type="checkbox" class="toggle toggle-primary" x-model="enabled"/>
+			</label>
+		</div>
+		<div>
+			Duplicate the chosen percent of packets before queuing them. It is also
+			possible to add a correlation.
+		</div>
+		<section x-show="enabled" x-transition>
+			@fs.FloatSlider(fs.With(
         fs.Label("Percent"),
         fs.Unit("%"),
       ))
-
-      @fs.FloatSlider(fs.With(
+			@fs.FloatSlider(fs.With(
         fs.Label("Correlation"),
         fs.Unit("%"),
         fs.Optional(true),
       ))
-    </section>
-  </div>
+		</section>
+	</div>
 }
