--- a/view/component/packetloss.templ
+++ b/view/component/packetloss.templ
@@ -1,11 +1,20 @@
 package component
 
 import (
-  fs "github.com/codekoala/network-shaper/view/component/floatslider"
+	"fmt"
+	fs "github.com/codekoala/network-shaper/view/component/floatslider"
+	"github.com/codekoala/network-shaper/netem"
 )
 
-templ PacketLossSettings() {
-  <div class="bg-base-300 my-5 p-3 rounded-xl" x-data="{ enabled: true }">
+func GetPacketLossData(cfg *netem.Netem) string {
+  return fmt.Sprintf(
+    `{ enabled: %v }`,
+    cfg.HasLossSettings(),
+  )
+}
+
+templ PacketLossSettings(cfg *netem.Netem) {
+  <div class="bg-base-300 my-5 p-3 rounded-xl" x-data={ GetPacketLossData(cfg) }>
     <div class="form-control">
       <label class="label cursor-pointer">
         <span class="label-text text-lg font-bold">Packet Loss</span>
