--- a/static/site.css
+++ b/static/site.css
@@ -688,6 +688,10 @@ h3 {
   flex-basis: 8.333333%;
 }
 
+.basis-10\/12 {
+  flex-basis: 83.333333%;
+}
+
 .basis-11\/12 {
   flex-basis: 91.666667%;
 }
@@ -736,6 +740,11 @@ h3 {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .py-3 {
