--- a/view/layout/base.templ
+++ b/view/layout/base.templ
@@ -1,57 +1,62 @@
 package layout
 
 import (
-  "github.com/codekoala/network-shaper/view/component"
-  "github.com/codekoala/network-shaper/view/model"
+	"github.com/codekoala/network-shaper/view/component"
+	"github.com/codekoala/network-shaper/view/model"
 )
 
 templ Base(state model.GlobalState, content templ.Component) {
-  <!doctype html>
-  <html>
-    <head>
-      <title>Network Shaper - { state.GetTitle() }</title>
-      <script src="/static/htmx.min.js" defer></script>
-      <script src="/static/alpinejs.min.js" defer></script>
-      <link href="/static/daisyui.css" rel="stylesheet" />
-      <link href="/static/site.css" rel="stylesheet" />
-    </head>
-
-    <body>
-      <div
-        class="bg-base-200 container mx-auto my-3 w-9/12 max-w-5xl rounded-xl p-5 shadow-xl"
-      >
-        <div class="flex w-full">
-          <div class="basis-1/12">
-            <img src="/static/images/logo.svg" alt="Networking Icon" />
-          </div>
-          <div class="basis-11/12 align-middle">
-            <h1 class="text-6xl">
-              Network Shaper
-            </h1>
-          </div>
-        </div>
-
-        <div role="tablist" class="tabs tabs-boxed">
-          for _, page := range state.Nav {
-            @component.NavButton(state, page)
-          }
-        </div>
-
-        <div class="divider"></div>
-
-        @content
-
-        <div class="divider"></div>
-
-        <div class="flex w-full">
-          <div class="grid h-5 flex-grow card place-items-center text-xs">
-            <div>
-              <a href="https://github.com/codekoala/network-shaper">Network Shaper</a>
-            </div>
-            <div>Copyright &copy; 2015-2024 Josh VanderLinden</div>
-          </div>
-        </div>
-      </div>
-    </body>
-  </html>
+	<!DOCTYPE html>
+	<html>
+		<head>
+			<title>Network Shaper - { state.GetTitle() }</title>
+			<script src="/static/htmx.min.js" defer></script>
+			<script src="/static/alpinejs.min.js" defer></script>
+			<link href="/static/daisyui.css" rel="stylesheet"/>
+			<link href="/static/site.css" rel="stylesheet"/>
+		</head>
+		<body>
+			<div
+				class="bg-base-200 container mx-auto my-3 w-9/12 max-w-5xl rounded-xl p-5 shadow-xl"
+			>
+				<div class="flex w-full">
+					<div class="basis-1/12">
+						<img src="/static/images/logo.svg" alt="Networking Icon"/>
+					</div>
+					<div class="basis-10/12 align-middle">
+						<h1 class="text-6xl">
+							Network Shaper
+						</h1>
+					</div>
+				</div>
+				<div class="flex w-full">
+					<div class="basis-11/12">
+						<div role="tablist" class="tabs tabs-boxed">
+							for _, page := range state.Nav {
+								@component.NavButton(state, page)
+							}
+						</div>
+					</div>
+					<div class="basis-1/12 mx-auto py-2">
+						<label class="flex cursor-pointer gap-2">
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"></circle><path d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"></path></svg>
+							<input type="checkbox" value="synthwave" class="toggle theme-controller"/>
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
+						</label>
+					</div>
+				</div>
+				<div class="divider"></div>
+				@content
+				<div class="divider"></div>
+				<div class="flex w-full">
+					<div class="grid h-5 flex-grow card place-items-center text-xs">
+						<div>
+							<a href="https://github.com/codekoala/network-shaper">Network Shaper</a>
+						</div>
+						<div>Copyright &copy; 2015-2024 Josh VanderLinden</div>
+					</div>
+				</div>
+			</div>
+		</body>
+	</html>
 }
