--- a/view/layout/base.templ
+++ b/view/layout/base.templ
@@ -13,6 +13,7 @@ templ Base(state model.GlobalState, content templ.Component) {
 			<script src="/static/htmx.min.js" defer></script>
 			<script src="/static/alpinejs.persist.js" defer></script>
 			<script src="/static/alpinejs.min.js" defer></script>
+			<script src="/static/site.js" defer></script>
 			<link href="/static/daisyui.css" rel="stylesheet"/>
 			<link href="/static/site.css" rel="stylesheet"/>
 		</head>
