--- a/view/layout/base.templ
+++ b/view/layout/base.templ
@@ -9,7 +9,7 @@ import (
 func GetBaseData(state model.GlobalState) string {
   return fmt.Sprintf(
     `{ lightTheme: $persist(%v) }`,
-    state.Theme == "nord",
+    state.Theme == model.LightTheme,
   )
 }
 
@@ -47,12 +47,8 @@ templ Base(state model.GlobalState, content templ.Component) {
 							}
 						</div>
 					</div>
-					<div class="basis-1/12 mx-auto py-2">
-						<label class="flex cursor-pointer gap-2">
-							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
-							<input name="theme" type="checkbox" value="nord" class="toggle theme-controller" x-model="lightTheme" hx-post="/theme" />
-							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"></circle><path d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"></path></svg>
-						</label>
+					<div class="basis-1/12 mx-auto py-2" hx-swap="innerHTML" hx-target="this">
+            @component.Theme(state)
 					</div>
 				</div>
 				<div class="divider"></div>
