--- a/view/component/floatslider/display.templ
+++ b/view/component/floatslider/display.templ
@@ -11,17 +11,17 @@ func GetData(opts *Opts) string {
 templ FloatSlider(opts *Opts) {
   <div class="grid grid-cols-5 gap-2 form-control my-2" x-data={ GetData(opts) }>
     <div class="align-middle">
-      <label class="label" for="delay_time">
+      <label class="label" for={ opts.GetName() }>
         <span class="label-text text-lg">{ opts.Label }:</span>
       </label>
     </div>
 
     <div class="align-middle col-span-3 py-3">
-      <input name="delay_time" type="range" min={ opts.MinStr() } max={ opts.MaxStr() } step={ opts.StepStr() } class="range range-primary" x-model="value" />
+      <input name={ opts.GetName() } type="range" min={ opts.MinStr() } max={ opts.MaxStr() } step={ opts.StepStr() } class="range range-primary" x-model="value" />
     </div>
 
     <div class="align-middle join">
-        <input type="number" min={ opts.MinStr() } max={ opts.MaxStr() } step={ opts.StepStr() } class="join-item input input-bordered input-primary text-right w-32" x-model="value" />
+        <input type="number" name={ opts.GetName() } min={ opts.MinStr() } max={ opts.MaxStr() } step={ opts.StepStr() } class="join-item input input-bordered input-primary text-right w-32" x-model="value" />
         <button class="btn input-bordered join-item w-14" disabled>
           { opts.Unit }
         </button>
