--- a/view/component/corruption.templ
+++ b/view/component/corruption.templ
@@ -27,10 +27,12 @@ templ CorruptionSettings(cfg *netem.Netem) {
 		</div>
 		<section x-show="enabled" x-transition>
 			@fs.FloatSlider(fs.With(
+        fs.Name("corrupt_pct"),
         fs.Label("Percent"),
         fs.Unit("%"),
       ))
 			@fs.FloatSlider(fs.With(
+        fs.Name("corrupt_corr"),
         fs.Label("Correlation"),
         fs.Unit("%"),
         fs.Optional(true),
